<resources>
    <string name="app_name">Kaneadua</string>
    <string name="app_title">Kaneadua Games</string>
    <string name="dont_have_an_account">Don\'t have an account? <u>Register</u></string>
    <string name="have_an_account">Do you have an account already? <u>Log in</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--Place Holder Text-->
    <string name="buy">Buy Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
</resources>